<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:background="@color/colorSurface">

    <LinearLayout
        android:id="@+id/outer_widget_ring_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSurface"
        android:gravity="center"
        android:padding="36dp"
        android:layout_gravity="center_horizontal">

        <FrameLayout
            android:id="@+id/preview_widget_ring_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/widget_bg">

            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/preview_widget_ring_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/preview_widget_ring_steps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="7523"
                        android:textAlignment="center"
                        android:textColor="@color/widgetPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/preview_widget_ring_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="75%"
                        android:textAlignment="center"
                        android:textColor="@color/widgetSecondary"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/inverse_bg_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:checked="false"
        android:textColor="@color/colorOnSurface"
        app:thumbTint="@color/colorOnPrimary"
        app:trackTint="@color/colorPrimary"
        app:rippleColor="@color/colorAccent"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/widget_pref_invert_bg"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginVertical="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/dynamic_colors_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="@color/colorOnSurface"
            android:checked="true"
            app:thumbTint="@color/colorOnPrimary"
            app:trackTint="@color/colorPrimary"
            app:rippleColor="@color/colorAccent"
            app:thumbIcon="@drawable/thumb_icon_selector"
            app:thumbIconTint="@color/colorPrimary"
            android:layout_marginBottom="30dp"
            android:text="@string/widget_pref_dynamic_colors"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/compact_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="@color/colorOnSurface"
            android:checked="false"
            app:thumbTint="@color/colorOnPrimary"
            app:trackTint="@color/colorPrimary"
            app:rippleColor="@color/colorAccent"
            app:thumbIcon="@drawable/thumb_icon_selector"
            app:thumbIconTint="@color/colorPrimary"
            android:layout_marginBottom="30dp"
            android:text="@string/widget_pref_compact"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textColor="@color/colorOnSurface"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/theme_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/theme_system"
                style="@style/Widget.Stepsy.ThemeToggleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/preference_system"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/theme_light"
                style="@style/Widget.Stepsy.ThemeToggleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/theme_light"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/theme_dark"
                style="@style/Widget.Stepsy.ThemeToggleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/theme_dark"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_pref_text_scale"
            android:textColor="@color/colorOnSurface"
            android:layout_marginBottom="8dp"
            android:textAppearance="?attr/textAppearanceBodyLarge"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/text_size_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="75"
            android:valueTo="150"
            android:stepSize="5"
            android:value="100"
            app:labelBehavior="gone"
            android:layout_marginBottom="30dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_opacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_pref_bg_opacity"
            android:textColor="@color/colorOnSurface"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/opacity_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:contentDescription="@null"
            android:value="100"
            android:valueFrom="0"
            android:valueTo="100"
            app:labelBehavior="floating"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/widget_pref_btn_save"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</LinearLayout>
